name:                streaming-http-example
version:             0.1.0.0
synopsis:            Streaming HTTP example
description:         Please see README.md
homepage:            http://github.com/jb55/streaming-http-example
license:             BSD3
license-file:        LICENSE
author:              William Casarin
maintainer:          bill@casarin.me
copyright:           2015 William Casarin
category:            Web, Streaming
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable streaming-http-example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends: base >= 4.6
               , streaming-wai
               , streaming-bytestring
               , bytestring
               , streaming
               , pipes
               , pipes-group
               , pipes-bytestring
               , lens
               , foldl
               , wai
               , pcg-random
               , warp
               , http-types
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jb55/streaming-http-example
